k8s/Day11/Ingress-Controller/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /merda
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port:
              number: 5000
    host: giropops-senhas.local
